--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <div id="text-container">
     <p id="text"></p>
 </div>
+<div>
+  <input type="button" id="wasm-bhtsne" value="bhtsne" disabled></input> 
+</div>
 <script src="index.js"></script>
 </body>
 </html>
