update README.md and toolchain

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p id="text"></p>
 </div>
 <div>
-  <input type="button" id="wasm-bhtsne" value="bhtsne" disabled></input> 
+  <input type="button" id="wasm-bhtsne" value="bhtsne" disabled>
 </div>
 <script src="index.js"></script>
 </body>
